--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
 
     {% if page.slug == 'home' %}
       <h2 class="txt-center">
-        Welcome to <strong>{{ site.title }}</strong>!
+          <strong>{{ site.title }}</strong>
       </h2>
     {% endif %}
 
