--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,11 @@
 
     <div class="container">
 
+    {% if page.slug != 'home' %}
       <h1 class="title">
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
       </h1>
+    {% endif %}
 
       <nav class="navbar">
         <a href="#" class="menu-icon">
@@ -25,13 +27,11 @@
       </nav>
     </div>
 
-    <!--
     {% if page.slug == 'home' %}
       <h2 class="txt-center">
           <strong>{{ site.title }}</strong>
       </h2>
     {% endif %}
-    -->
 
   </div>
 
