Remove description from title on home

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
 <title>
   {% if page.title == 'Home' %}
-    {{ site.title }} &bull; {{ site.description }}
+    {{ site.title }}
   {% else %}
     {{ page.title }} &bull; {{ site.title }}
   {% endif %}
